--- a/src/assets/css/index.sass
+++ b/src/assets/css/index.sass
@@ -1,1 +1,16 @@
 $b_green: #57c654
+
+@mixin box-corner-shadow($redius: 8px)
+  box-shadow: 1px 2px 15px rgba(0, 0, 0, .3)
+  -webkit-border-radius: $redius
+  -moz-border-radius: $redius
+  border-radius: $redius
+
+@mixin box-center
+  position: relative
+  top: 50%
+  left: 50%
+  -webkit-transform: translate(-50%, -50%)
+  -moz-transform: translate(-50%, -50%)
+  -ms-transform: translate(-50%, -50%)
+  -o-transform: translate(-50%, -50%)
